--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ ehthumbs.db
 Thumbs.db
 Config.xconfig
 Owlette-App/Owlette-App.xcodeproj/project.xcworkspace/xcuserdata/juanceballos.xcuserdatad/UserInterfaceState.xcuserstate
+
+Secrets/
